--- a/packages.config
+++ b/packages.config
@@ -36,6 +36,8 @@
   <package id="Portable.BouncyCastle" version="1.8.9" targetFramework="net472" />
   <package id="Select.HtmlToPdf" version="22.1.0" targetFramework="net472" />
   <package id="System.Buffers" version="4.5.1" targetFramework="net472" />
+  <package id="System.Data.Common" version="4.3.0" targetFramework="net472" />
+  <package id="System.Data.OracleClient" version="1.0.8" targetFramework="net472" />
   <package id="System.Diagnostics.DiagnosticSource" version="5.0.0" targetFramework="net472" />
   <package id="System.IO.FileSystem.Primitives" version="4.3.0" targetFramework="net472" />
   <package id="System.IO.Packaging" version="4.0.0" targetFramework="net472" />
