--- a/IMPLDashboard.csproj
+++ b/IMPLDashboard.csproj
@@ -2210,6 +2210,7 @@
     <Content Include="Views\User\Login.cshtml" />
     <Content Include="Views\Dashboard\NationalWiseSkuKpiPartial.cshtml" />
     <Content Include="Views\Dashboard\DashboardHeaderPartial.cshtml" />
+    <Content Include="Views\Dashboard\OwnDbWiseSkuKpiPartial.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
