--- a/IMPLDashboard.csproj
+++ b/IMPLDashboard.csproj
@@ -2211,6 +2211,7 @@
     <Content Include="Views\Dashboard\NationalWiseSkuKpiPartial.cshtml" />
     <Content Include="Views\Dashboard\DashboardHeaderPartial.cshtml" />
     <Content Include="Views\Dashboard\OwnDbWiseSkuKpiPartial.cshtml" />
+    <Content Include="Views\Dashboard\NationalWisePriVsSecPartial.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
