--- a/IMPLDashboard.csproj
+++ b/IMPLDashboard.csproj
@@ -2213,6 +2213,7 @@
     <Content Include="Views\Dashboard\DashboardHeaderPartial.cshtml" />
     <Content Include="Views\Dashboard\OwnDbWiseSkuKpiPartial.cshtml" />
     <Content Include="Views\Dashboard\NationalWisePriVsSecPartial.cshtml" />
+    <Content Include="Views\Dashboard\ProductSalesComparison.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
