--- a/IMPLDashboard.csproj
+++ b/IMPLDashboard.csproj
@@ -2214,6 +2214,7 @@
     <Content Include="Views\Dashboard\OwnDbWiseSkuKpiPartial.cshtml" />
     <Content Include="Views\Dashboard\NationalWisePriVsSecPartial.cshtml" />
     <Content Include="Views\Dashboard\ProductSalesComparison.cshtml" />
+    <Content Include="Views\Dashboard\OutletInMap.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
