--- a/Web.config
+++ b/Web.config
@@ -56,7 +56,7 @@
   </runtime>
   <connectionStrings>
     <add name="PartCodeContext" connectionString="Data Source=(localdb)\v11.0; Initial Catalog=PartCodeContext-20190109104721; Integrated Security=True; MultipleActiveResultSets=True; AttachDbFilename=|DataDirectory|PartCodeContext-20190109104721.mdf" providerName="System.Data.SqlClient" />
-    <add name="ReportDBConn" connectionString="Data Source=REPORTDBREM;User ID=impldb;Password=i;Unicode=True;Persist Security Info=True;" providerName="System.Data.OracleClient" />
+    <add name="ReportDBConn" connectionString="Data Source=REPORTDB;User ID=impldb;Password=i;Unicode=True;Persist Security Info=True;" providerName="System.Data.OracleClient" />
   </connectionStrings>
   <system.codedom>
     <compilers>
