--- a/IMPLDashboard.csproj
+++ b/IMPLDashboard.csproj
@@ -2219,6 +2219,8 @@
     <Content Include="Views\Dashboard\OutletInMap.cshtml" />
     <Content Include="Views\Dashboard\RegionWiseSkuKpi.cshtml" />
     <Content Include="Views\SalesReport\SalesReport.cshtml" />
+    <Content Include="Views\SalesReport\SalesReportMOM.cshtml" />
+    <Content Include="Views\SalesReport\BestSellingProducts.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
