--- a/IMPLDashboard.csproj
+++ b/IMPLDashboard.csproj
@@ -2221,6 +2221,7 @@
     <Content Include="Views\SalesReport\SalesReport.cshtml" />
     <Content Include="Views\SalesReport\SalesReportMOM.cshtml" />
     <Content Include="Views\SalesReport\BestSellingProducts.cshtml" />
+    <Content Include="Views\Dashboard\FocusKpiPartial.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
